# skills

./: AGENTS.md  REASON.md  agentskills.io.md  vercel-skill-cli.md
.agents/commands/: learn-a-command.md
.agents/skills/agent-creation/: SKILL.md
.agents/skills/app-extraction-and-static-analysis/: SKILL.md
.agents/skills/app-gap-analysis-agent/: SKILL.md
.agents/skills/app-plan-feature-stories/: SKILL.md
.agents/skills/app-risk-analysis-agent/: SKILL.md
.agents/skills/app-workshop-recaps-consolidate/: SKILL.md
.agents/skills/app-workshop-session-pdf-recap-next/: SKILL.md
.agents/skills/extraction-and-static-analysis/: SKILL.md
.agents/skills/gap-analysis-agent/: SKILL.md
.agents/skills/learn-context-window/: SKILL.md
.agents/skills/org-agent-creation/: SKILL.md
.agents/skills/org-agent-skill-creator/: SKILL.md
.agents/skills/org-learn-context-window/: SKILL.md
.agents/skills/plan-feature-stories/: SKILL.md
.agents/skills/ployglot-project-scafford/: SKILL.md
.agents/skills/project-ployglot-project-scafford/: SKILL.md
.agents/skills/project-ployglot-project-scafford/references/templates/packages-py/: pyproject.toml  tests-_helpers.py  tests-test_parity.py  tests-test_smoke.py
.agents/skills/risk-analysis-agent/: SKILL.md
.agents/skills/skill-spec-builder/: gpt-spec.md  knowledge-manifest.md  (+1 more)
.claude/commands/: agent-skill-create.md  agent-skill-validate.md  learn-a-skill.md  plan-feature-story-task.md
.github/workflows/: validate-skills.yml
.partials/: STANDARDS.md  create_skill_file.md
scripts/: validate-skills.mjs
(+38 files in other folders)
