[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "<slug>"
version = "0.1.0"
description = "<subject> — Python twin of `packages/ts/`"
license = "MIT"
authors = [{ name = "<author>" }]
keywords = ["<slug>", "polyglot"]
requires-python = ">=3.11,<3.13"
dependencies = []
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
    "License :: OSI Approved :: MIT License",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "mypy>=1.8.0",
    "ruff>=0.2.0",
    "build>=1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["<snake_pkg>"]

[tool.hatch.build.targets.sdist]
include = ["<snake_pkg>/", "tests/", "README.md", "LICENSE", "pyproject.toml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.mypy]
strict = true
python_version = "3.11"
files = ["<snake_pkg>"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
